# spacescape

./: .gitignore  README.md  stars.csv
trunk/: BuildingSpacescape.txt  CMakeLists.txt  README.txt  Spacescape.sln  TODO.txt
trunk/CMake/: FindOGRE.cmake  FindOIS.cmake  FindPkgMacros.cmake  OgreConfigTargets.cmake  OgreFindFrameworks.cmake  OgreGetVersion.cmake
trunk/Spacescape/: CMakeLists.txt
trunk/Spacescape/app/linux/: app.cfg  resources.cfg
trunk/Spacescape/app/mac/: .gitignore  app.cfg  plugins.cfg  plugins_d.cfg  resources.cfg
trunk/Spacescape/app/win/: plugins.cfg  plugins_d.cfg  resources.cfg
trunk/Spacescape/assets/: flares.xcf  spacescape-logo.xcf
trunk/Spacescape/include/: QtFilePathProperty.h  QtOgreWidget.h  QtOgreWidgetOSX.h  QtSpacescapeAboutDialog.h  QtSpacescapeAboutDialogUI.h  QtSpacescapeExportFileDialog.h  QtSpacescapeMainWindow.h  QtSpacescapeUI.h  QtSpacescapeWidget.h
trunk/Spacescape/include/QtPropertyBrowser/: qteditorfactory.h  qtpropertymanager.h
trunk/Spacescape/lib/: OgreMain.lib  OgreMain_d.lib  Plugin_Spacescape.lib  Plugin_Spacescape_d.lib  QtSolutions_PropertyBrowser-2.5.lib  QtSolutions_PropertyBrowser-2.5d.lib  libqcocoa.dylib
trunk/Spacescape/lib/QtCore.framework/: QtCore.prl  QtCore_debug.prl
trunk/Spacescape/lib/QtCore.framework/Contents/: Info.plist
trunk/Spacescape/lib/QtCore.framework/Versions/5/Headers/: QtCore  QtCoreDepends  qconfig.h  qfeatures.h  qtcoreversion.h
trunk/Spacescape/lib/QtGui.framework/: QtGui.prl  QtGui_debug.prl
trunk/Spacescape/lib/QtGui.framework/Contents/: Info.plist
trunk/Spacescape/lib/QtGui.framework/Versions/5/Headers/: QtGui  QtGuiDepends  qtguiversion.h
trunk/Spacescape/lib/QtPrintSupport.framework/: Headers  QtPrintSupport.prl  QtPrintSupport_debug.prl
trunk/Spacescape/lib/QtPrintSupport.framework/Contents/: Info.plist
trunk/Spacescape/lib/QtPrintSupport.framework/Versions/5/: QtPrintSupport
trunk/Spacescape/lib/QtPrintSupport.framework/Versions/5/Headers/: QtPrintSupportDepends  qtprintsupportversion.h
trunk/Spacescape/lib/QtWidgets.framework/: QtWidgets.prl  QtWidgets_debug.prl
trunk/Spacescape/lib/QtWidgets.framework/Contents/: Info.plist
trunk/Spacescape/lib/QtWidgets.framework/Versions/5/Headers/: QtWidgets  QtWidgetsDepends  qtwidgetsversion.h
trunk/Spacescape/media/: green-nebula-stars.xml  overlapping-point-stars.xml
trunk/Spacescape/media/materials/textures/: hdr-flare-white.exr  hdr-flare-white2.exr
trunk/Spacescape/save/: fuzzy-stars.xml  green-nebula-stars.xml  overlapping-point-stars.xml  purple-nebula-complex.xml  purple-nebula.xml
trunk/Spacescape/scripts/: Spacescape.pro  Spacescape.qrc  Spacescape.vcproj  aboutdialog.ui  fix_paths.sh  mainwindow.ui
trunk/Spacescape/src/: Main.cpp  QtFilePathProperty.cpp  QtOgreWidget.cpp  QtOgreWidgetOSX.cpp  QtSpacescapeAboutDialog.cpp  QtSpacescapeExportFileDialog.cpp  QtSpacescapeMainWindow.cpp  QtSpacescapeWidget.cpp
trunk/SpacescapeLauncher/: CMakeLists.txt
trunk/SpacescapeLauncher/include/: Resource.h
trunk/SpacescapeLauncher/resources/: SpacescapeLauncher.rc
trunk/SpacescapeLauncher/src/: SpacescapeLauncher.cpp  stdafx.cpp
trunk/SpacescapePlugin/: CMakeLists.txt
trunk/SpacescapePlugin/include/: SpacescapeBillboard.h  SpacescapeBillboardSet.h  SpacescapeLayer.h  SpacescapeLayerBillboards.h  SpacescapeLayerNoise.h  SpacescapeLayerPoints.h  SpacescapeNoiseMaterial.h  SpacescapePlugin.h  SpacescapePrerequisites.h  SpacescapeProgressListener.h  ticpp.h  ticpprc.h  tinyxml.h
trunk/SpacescapePlugin/scripts/: Plugin_Spacescape.vcproj
trunk/SpacescapePlugin/src/: SpacescapeBillboard.cpp  SpacescapeBillboardSet.cpp  SpacescapeDll.cpp  SpacescapeLayer.cpp  SpacescapeLayerBillboards.cpp  SpacescapeLayerNoise.cpp  SpacescapeLayerPoints.cpp  SpacescapeNoiseMaterial.cpp  SpacescapePlugin.cpp  ticpp.cpp  tinyxml.cpp  tinyxmlparser.cpp
