CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)

PROJECT(Spacescape)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/")
FIND_PACKAGE(OGRE REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(POCO QUIET)

if(UNIX)
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Spacescape/app/linux/bin)
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Spacescape/app/linux/bin)
ELSEIF(WIN32)
	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Spacescape/app/win/${CMAKE_BUILD_TYPE})
	SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Spacescape/app/win/${CMAKE_BUILD_TYPE})
ENDIF(UNIX)

if (NOT APPLE)
  # Create debug libraries with _d postfix
  set(CMAKE_DEBUG_POSTFIX "_d")
endif ()

ADD_DEFINITIONS(-DTIXML_USE_TICPP)
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIRS})
ADD_SUBDIRECTORY(Spacescape)
ADD_SUBDIRECTORY(SpacescapePlugin)

IF(WIN32)
	ADD_SUBDIRECTORY(SpacescapeLauncher)
ENDIF(WIN32)
